      for better compatibility with some applications/platforms.
    ! Icon images with lower than 32 bits-per-pixel are not compressed anymore. Even Windows has problems with 24
      BPP compressed icons and transparency mask for lower BPPs can be generated only for uncompressed images.
  - Improving appearance of 32bpp icons on Windows XP when saving uncompressed.
  - ExtractIcon and ExtractBitmap overloads: Requested icon size did not work for larger than 256x256 icon sizes or
    PNG compressed icons smaller than 256x256 pixels.
  - ExtractIcon: It could return null if the requested icon was not supported (just like ExtractNearestIcon) though
    according to the documentation this method should throw PlatformNotSupportedExteption in such cases.
- ImageExtensions class:
  - Fixing SaveAsTiff if currentFrameOnly = false and image contains non-icon images.
+ The PixelFormatExtensions class has been made public along with some methods:
  + ToBitsPerPixel
  + IsIndexed
  + IsValidFormat
  + IsSupported

- KGySoft.Drawing.Imaging namespace:
====================================
- Palette class: Fixing a possible issue in default caching logic for concurrent access.


~~~~~~~~~
! v5.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Referencing KGySoft.CoreLibraries 5.0.1
+ Targeting also .NET Core 2.0.
+ Targeting also .NET Core 3.0.

+ KGySoft.Drawing.Imaging namespace:
====================================
A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.
Additionally, provides types for quantizing and dithering.
The new public types in this namespace:
+ IBitmapData interface
+ IReadableBitmapData interface
+ IWritableBitmapData interface
+ IReadWriteBitmapData interface
+ IBitmapDataRow interface
+ IReadableBitmapDataRow interface
+ IWritableBitmapDataRow interface
+ IReadWriteBitmapDataRow interface
+ IDitherer interface
+ IDitheringSession interface
+ IQuantizer interface
+ IQuantizingSession interface